--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,9 @@
-/**
-* Template Name: MyPortfolio - v2.1.0
-* Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Inconsolata", monosapce;
+  /* font-family: "Inconsolata", monosapce; */
+  font-family: "Raleway", sans-serif;
   color: #0d1e2d;
 }
 
